[ADV] Add paginated response
