# business/data/schema/seed.go
@@ -35,10 +35,10 @@ INSERT INTO categories (uuid,name,created,updated) VALUES
 ('7c3680b2-9309-466a-af85-ed9174548014', 'Software', '2021-03-24 00:00:00', '2021-03-24 00:00:00')
 ON CONFLICT DO NOTHING;
 
-INSERT INTO adverts (uuid,user_uuid,category_uuid,title,description,location,price,created,updated) VALUES
-('51da7b78-f2b7-4fed-88d1-ece8a3a9a554','c0a6259e-7ac6-4142-92b3-67573e416a97', 'b8b86492-82f5-4716-954c-b928b72b9206', 'Title1', 'Description1', 'Kiev', 101, '2021-03-24 00:00:00', '2021-03-24 00:00:00'),
-('0ceb43ff-2091-4075-ab0a-c10d4442b7d5','489deb46-c944-4741-96d1-8977d5272a48', 'ea4859f6-ef40-4a1f-a822-3028da728125', 'Title2', 'Description2', 'Kiev', 102, '2021-03-24 00:00:00', '2021-03-24 00:00:00'),
-('c77115eb-b605-479d-bdb1-83d085a6cc54','3fcd5529-8d3b-4fb1-9c25-0e2591ffa5d1', 'da0fad0b-7841-4241-8716-bd294706c84b', 'Title3', 'Description3', 'Kiev', 103, '2021-03-24 00:00:00', '2021-03-24 00:00:00'),
-('d7ba41d8-b5ad-46ea-9354-6af79f81471d','601b7b6e-a99f-462a-99c1-82dba67f5425', '7c3680b2-9309-466a-af85-ed9174548014', 'Title4', 'Description4', 'Kiev', 104, '2021-03-24 00:00:00', '2021-03-24 00:00:00')
+INSERT INTO adverts (uuid,user_uuid,category_uuid,title,description,location,price,is_active,created,updated) VALUES
+('51da7b78-f2b7-4fed-88d1-ece8a3a9a554','c0a6259e-7ac6-4142-92b3-67573e416a97', 'b8b86492-82f5-4716-954c-b928b72b9206', 'Title1', 'Description1', 'Kiev', 101, true, '2021-03-24 00:00:00', '2021-03-24 00:00:00'),
+('0ceb43ff-2091-4075-ab0a-c10d4442b7d5','489deb46-c944-4741-96d1-8977d5272a48', 'ea4859f6-ef40-4a1f-a822-3028da728125', 'Title2', 'Description2', 'Kiev', 102, true, '2021-03-24 00:00:00', '2021-03-24 00:00:00'),
+('c77115eb-b605-479d-bdb1-83d085a6cc54','3fcd5529-8d3b-4fb1-9c25-0e2591ffa5d1', 'da0fad0b-7841-4241-8716-bd294706c84b', 'Title3', 'Description3', 'Kiev', 103, true, '2021-03-24 00:00:00', '2021-03-24 00:00:00'),
+('d7ba41d8-b5ad-46ea-9354-6af79f81471d','601b7b6e-a99f-462a-99c1-82dba67f5425', '7c3680b2-9309-466a-af85-ed9174548014', 'Title4', 'Description4', 'Kiev', 104, false, '2021-03-24 00:00:00', '2021-03-24 00:00:00')
 ON CONFLICT DO NOTHING;
 `
