# docs/swagger.json
@@ -22,10 +22,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/advert.AdvertInfo"
-                            }
+                            "$ref": "#/definitions/handlers.paginatedLimitOffsetAdvertResponse"
                         }
                     }
                 }
@@ -149,6 +146,9 @@
                 "id": {
                     "type": "string"
                 },
+                "is_active": {
+                    "type": "boolean"
+                },
                 "location": {
                     "type": "string"
                 },
@@ -191,6 +191,29 @@
             "properties": {
                 "status": {
                     "type": "string"
+                }
+            }
+        },
+        "handlers.paginatedLimitOffsetAdvertResponse": {
+            "type": "object",
+            "properties": {
+                "limit": {
+                    "type": "integer"
+                },
+                "offset": {
+                    "type": "integer"
+                },
+                "records": {
+                    "type": "integer"
+                },
+                "results": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/advert.AdvertInfo"
+                    }
+                },
+                "total": {
+                    "type": "integer"
                 }
             }
         },
